apps/base/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    app: excalidraw
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: excalidraw
